--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 *
-!.github/
+!*/
+!/.github/**
+!/archetypes/**
+!/layouts/**
+!/static/**
 !.gitignore
-!archetypes/
-!layouts/
-!static/
-!package.json
-!package-lock.json
 !.prettierrc
+!package.json
 !readme.md
